# fixbug

./: .gitignore  README.md  pyproject.toml
.fixbug/: current_advice.md  last_scan.json
fixbug/: __init__.py  _impl.py  cloud.py  dashboard.py  fixbug_pytest_plugin.py  validate.py
fixbug.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
