[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixbug"
version = "1.0.0"
description = "fixbug — behavior-graph scanner that learns from your failures"
readme = "README.md"
authors = [
  { name = "Zhongchang Huang", email = "valhuang@kaiwucl.com" }
]
license = "LicenseRef-BSL-1.1"
requires-python = ">=3.8"
keywords = [
  "static analysis",
  "behavior graph",
  "curvature",
  "world-line",
  "code quality",
  "fault localization"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Operating System :: OS Independent"
]

[project.scripts]
fixbug = "fixbug:main"

[project.entry-points."pytest11"]
fixbug = "fixbug.fixbug_pytest_plugin"

[project.optional-dependencies]
server = [
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "pydantic>=2.0"
]
dev = [
  "pytest>=7.0",
  "twine>=4.0",
  "build>=0.10"
]

[project.urls]
Homepage = "https://github.com/val1813/fixbug"
Issues = "https://github.com/val1813/fixbug/issues"

[tool.setuptools]
packages = ["fixbug"]
include-package-data = true
